# psiemu

./: .gitignore  LICENSE  Pipfile  README.md  psiemu  pyproject.toml
.github/workflows/: build.yaml
scripts/: build.sh  release.sh  test_wheel.sh
src/: __main__.py  psiemu.py  pyproject.toml  setup.py
src/psiemu/: __init__.py  __main__.py  psiemu.py
src/psiemu/resources/: profiles.yaml
