[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "psiemu"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Jason Morley", email = "hello@jbmorley.co.uk"}
]
dependencies = []
dynamic = ["version"]

# [tool.setuptools.package-data]
# changes_semver = ["templates/*"]

[project.scripts]
psiemu = "src.psiemu:main"
